
Package org.springframework.osgi.mock
* added specific OSGi r4.2 methods
* added case insensitive filter comparison to avoid different behaviours between OSGi platforms

Package org.springframework.osgi.test
* added small improvement for improving detection of inner classes

Package org.springframework.osgi.util
* improved fallback mechanism for OSGi r4.1 features running in OSGi r4.0 platforms


Changes in version 1.2.0 final (2009-04-09)
-------------------------------------------

General
* improved web-console sample (added more documentation and bundles from the SpringSource Enterprise
Bundle Repository)
* updated archetype to support both Bundlor and Felix Bundle plugin
* increased Spring import range up to version 4

Package org.springframework.osgi.config
* fixed collection parsing bug that ignored inlined comparators during detection of ordered types
* improved definition of generated beans for better IDE integration

Package org.springframework.osgi.service
* fixed conversion of ServiceReferences in ServiceReferenceEditor
* improved error reporting for importer and exporter listeners configured with non-existing or incorrect custom methods
* fixed validation bug that prevent ServiceFactory beans from being exported with specified interfaces

Package org.springframework.osgi.test
* fixed initialization bug in FelixPlatform that ignored custom settings
* fixed NPE when locating Maven artifacts in repositories mapped as virtual drives

Package org.springframework.osgi.web
* improved unpacking of war bundles with missing entries


Changes in version 1.2.0 RC1 (2009-03-09)
-----------------------------------------

General
* various documentation improvements and fixes
* upgraded to Felix 1.4.1
* upgraded to Knopflerfish 2.2.0

Package org.springframework.osgi.compendium
* fixed OSGi service unregistration of <managed-service/> listeners
* fixed property injection to occur before the initializing method is invoked for <managed-service-factory/> beans