@@ -80,6 +80,9 @@ Package org.springframework.osgi.test
 Package org.springframework.osgi.util
 * improved fallback mechanism for OSGi r4.1 features running in OSGi r4.0 platforms
 
+Package org.springframework.osgi.web
+* improved encoding of nested context paths
+
 
 Changes in version 1.2.0 final (2009-04-09)
 -------------------------------------------
